--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         </div>
     </div>
 
-    <script src="node_modules/node-poweredup/dist/browser/poweredup.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/node-poweredup@9.0.0/dist/browser/poweredup.min.js"></script>
     <script src="src/app.js"></script>
 </body>
 </html>
