Update title to 'LEGO Controller v2'

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🎮 LEGO Controller</h1>
+        <h1>🎮 LEGO Controller v2</h1>
         
         <div class="info">
             <p><strong>Instructions:</strong></p>
